# yt-dc-bot-rs

./: .env.example  Cargo.toml  Dockerfile  docker-compose.yml
src/: commands.rs  events.rs  lib.rs  main.rs
